# simple_recommendation_engine

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  prepare.py  start_glue_job.sh  upload_prepare.sh
.github/workflows/: build_utils.yml  test.yml  upload.yml
analysis/: Movie Data Analysis - Scratch Notes.ipynb  Movies Data Analysis.ipynb  prepare.py  prepare_genres.py  requirements.txt  test_prepare_genres.py
analysis/data_manipulation/: Movie Data Manipulation.ipynb
analysis/notebooks/: Movies Data Analysis.ipynb
analysis/notebooks/.ipynb_checkpoints/: Movies Data Analysis-checkpoint.ipynb
analysis/notebooks/input/: all_movies.csv
analysis/utils/: cleaning.py  pyproject.toml  recommendation.py  test_cleaning.py  test_recommendation.py  test_transform.py  transform.py
analysis/utils/fixtures/: movies.py  recommendation.py
analysis/utils/pydata_engine_utils/: cleaning.py  extract.py
analysis/utils/tests/: test_cleaning.py  test_prepare_genres.py  test_recommendation.py
analysis/utils/tests/fixtures/: cleaned_data_fixture.csv  duplicated_movie_fixture.csv  initial_data_fixture.csv  movies.py
analysis_complete/analysis/: Movie Data Analysis - Scratch Notes.ipynb  Movies Data Analysis.ipynb
analysis_complete/analysis/.ipynb_checkpoints/: Movies Data Analysis-checkpoint.ipynb
analysis_complete/analysis/data_manipulation/: Movie Data Manipulation.ipynb
analysis_complete/analysis/input/: all_movies.csv
tf/: buckets.tf  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
tf/aws-glue/: main.tf
(+8 files in other folders)
